Fixed the navbar brand, positioned it and customized it properly. Had to move the navbar buttons down a bit more to align in with the brand. Everything seems to be done on the homepage aswell now

--- a/assets/scss/Home/Home.scss
+++ b/assets/scss/Home/Home.scss
@@ -5,25 +5,33 @@
 #InitalButton***REMOVED***
     position: relative; 
     margin-top: 10%;
+    
 ***REMOVED***
 
 #titleScreen ***REMOVED***
-    margin-top: 10%; 
+
     text-align: center;
     font-size: 30px;
     color: #ff6666;
     
     h1 ***REMOVED***
         font-size: 100px;
+        margin-bottom: 50px;
 ***REMOVED***
     
  ***REMOVED***
  
- #boardName ***REMOVED***
+#boardName ***REMOVED***
 
   border-bottom-color: #ff6666;
   border-bottom-width:3px;
   border-style:none none dashed;
   background: #353535;
+  margin-top:30px;
+  
+ ***REMOVED***
+ 
+ #submitBoardName ***REMOVED***
+     margin-top:35px;
  ***REMOVED***
  
