--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -1,8 +1,10 @@
-
+//@import url("http://fonts.googleapis.com/css?family=Coming+Soon");
 
 body ***REMOVED***
     padding-top: 50px;
     padding-bottom: 20px;
+    background: #353535;
+    //font-family: "Coming Soon"
 ***REMOVED***
 
 /* Wrapping element */
@@ -35,8 +37,23 @@ input, select, textarea ***REMOVED***
 
 .navbar, .navbar-inverse, .navbar-fixed-top
 ***REMOVED***
-    background: #353535;
-    color: red;
+   
     height: 80px;
+***REMOVED***
+
+.navbar-brand ***REMOVED***
+    position: absolute;
+    
+    left:1px;
+    bottom:60px;
+   
+    h1 ***REMOVED***
+         margin-left:30px;
+            font-size:70px;
+            color: #D24D57;
+            
+***REMOVED***
+
+    
 ***REMOVED***
 
